CPQ/FlexDeploy 7.0/objects/Deposit_Account__c.object
<CustomObject>
    <fields>
        <fullName>AC_No__c</fullName>
        <displayFormat>AC-{0}</displayFormat>
        <label>AC No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF(ISPICKVAL(Account__r.Active__c,&apos;Yes&apos;), &apos;Active&apos;, &apos;In-Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposit Accounts</relationshipLabel>
        <relationshipName>Deposit_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposit Accounts</relationshipLabel>
        <relationshipName>Deposit_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deposit Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Status__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DP#{00}</displayFormat>
        <label>Deposit #No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>